# AVD3

./: .gitignore  .gitmodules  README.md  data.ipynb  data.py  mapicky.py  marek.ipynb  notebuuucek.ipynb  podle_statu.ipynb  preprocess_country_codes.ipynb  pyproject.toml  requirements.txt  streamlit.py  test_mapicky.py  transform_geojsons.ipynb  transformed.ipynb  uchazeci_transformed.csv
.streamlit/: config.toml
app/: main.py
data/: country_codes.csv  lau2.csv  official_country_names.csv  prf_uchazeci.csv  prf_uchazeci.xlsx  uchazeci_transformed.csv
