[tool.poetry]
name = "avd3"
version = "0.1.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
ipykernel = "^6.26.0"
lxml = "^4.9.3"
requests = "^2.31.0"
unidecode = "^1.3.7"
plotly = "^5.18.0"
nbformat = "^5.9.2"
streamlit = "^1.31.1"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
polars = "^0.20.21"
geopandas = "^0.14.3"
folium = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
